--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,5 +47,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+                android:name=".ui.TestListActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.FullScreen" >
+        </activity>
     </application>
 </manifest>
