--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,7 @@
         <activity
                 android:name=".ui.TestListActivity"
                 android:label="@string/app_name"
-                android:theme="@style/AppTheme.FullScreen">
+                android:theme="@style/AppTheme">
 
         </activity>
     </application>
